<resources>
    <string name="app_name">Direction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_bottom_list_title">List</string>
    <string name="nav_bottom_dining_title">Dining</string>
    <string name="nav_bottom_grocery_title">Grocery</string>
    <string name="nav_bottom_note_title">Notes</string>
    <string name="search_bar">Search</string>
    <string name="settings">Settings</string>
    <string name="setting_duration_time">Duration Time (coming soon)</string>
    <string name="title_activity_maps">Direction</string>
    <string name="setting_location">Change Location</string>
    <string name="setting_alphabetic">A - Z</string>
    <string name="setting_nearest">Nearest (coming soon)</string>
    <string name="setting_sorting">Sorting</string>
    <string name="delete">DELETE</string>
    <string name="add_stores">Add stores to my list</string>
    <string name="add_notes">Create notes</string>
    <string name="todo_note">Empty</string>
    <integer name="repeat_num">3</integer>
    <string name="splash_screen">Lets ride ...</string>
    <string name="done">Done</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="add">add</string>


</resources>
