<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bar_search"
        android:title="@string/search_bar"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"/>


    <item
        android:id="@+id/bar_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="always|collapseActionView">

        <menu>
            <item
                android:id="@+id/bar_duration_time"
                android:title="@string/setting_duration_time"/>
            <item
                android:id="@+id/bar_location"
                android:title="@string/setting_location"/>

            <item
                android:id="@+id/bar_sorting"
                android:title="@string/setting_sorting">
                <menu>
                    <item
                        android:id="@+id/bar_alphabetic"
                        android:title="@string/setting_alphabetic"/>
                    <item
                        android:id="@+id/bar_nearest"
                        android:title="@string/setting_nearest"/>
                </menu>
            </item>

        </menu>

    </item>




</menu>