<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_my_store_list"
        android:title="@string/nav_bottom_list_title"
        android:icon="@drawable/ic_list_black_24dp"/>

    <item
        android:id="@+id/nav_my_store_dining"
        android:title="@string/nav_bottom_dining_title"
        android:icon="@drawable/ic_restaurant_menu_black_24dp"/>

    <item
        android:id="@+id/nav_my_store_grocery"
        android:title="@string/nav_bottom_grocery_title"
        android:icon="@drawable/ic_local_grocery_store_black_24dp"/>

    <item
        android:id="@+id/nav_my_store_notes"
        android:title="@string/nav_bottom_note_title"
        android:icon="@drawable/ic_event_note_black_24dp"/>

</menu>